[gd_scene load_steps=3 format=3 uid="uid://cgy7st1hukwkw"]

[ext_resource type="Script" path="res://Scripts/Save-Load.gd" id="1_2t30w"]
[ext_resource type="Theme" uid="uid://dchsfnmpldp4" path="res://Resources/Themes/Menu_Button_Bold.tres" id="2_epyqb"]

[node name="Save-Load" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2t30w")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 500.0
offset_right = 960.0
offset_bottom = 580.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
split_offset = 1005
dragger_visibility = 1

[node name="File 1" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_epyqb")
text = "File 1"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_epyqb")
text = "X"

[node name="HSplitContainer2" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
split_offset = 1005
dragger_visibility = 1

[node name="File 2" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_epyqb")
text = "File 2"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_epyqb")
text = "X"

[node name="HSplitContainer3" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
split_offset = 1005
dragger_visibility = 1

[node name="File 3" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_epyqb")
text = "File 3"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_epyqb")
text = "X"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer/File 1" to="." method="_on_file_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer2/File 2" to="." method="_on_file_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer2/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer3/File 3" to="." method="_on_file_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer3/Button" to="." method="_on_button3_pressed"]
